log
Thu Mar 17 22:50:27 UTC 2022: 
 tests:  0|6
total_score: 0/70
95438ce
Thu Mar 17 23:35:33 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=0;
       ^~
list.c:34:10: error: ‘S’ undeclared (first use in this function)
   return S;
          ^
list.c:34:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
15c87a5
Thu Mar 17 23:37:56 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->head=NULL;
       ^~
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   List->tail=NULL;
       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=NULL;
       ^~
list.c:36:10: error: ‘S’ undeclared (first use in this function)
   return S;
          ^
list.c:36:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
20378c7
Thu Mar 17 23:38:08 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   List->head=NULL;
       ^~
list.c:34:7: error: expected identifier or ‘(’ before ‘->’ token
   List->tail=NULL;
       ^~
list.c:35:7: error: expected identifier or ‘(’ before ‘->’ token
   List->current=NULL;
       ^~
list.c:36:10: error: expected expression before ‘List’
   return List;
          ^~~~
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8e7030c
Thu Mar 17 23:38:19 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘.’ token
   List.head=NULL;
       ^
list.c:34:7: error: expected identifier or ‘(’ before ‘.’ token
   List.tail=NULL;
       ^
list.c:35:7: error: expected identifier or ‘(’ before ‘.’ token
   List.current=NULL;
       ^
list.c:36:10: error: expected expression before ‘List’
   return List;
          ^~~~
list.c:32:9: error: unused variable ‘Lista’ [-Werror=unused-variable]
   List *Lista= (List*) malloc(sizeof(List));
         ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b7eaab2
Thu Mar 17 23:38:49 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
e2cb9af
